packages/pipeline-editor/style/index.css
/* ... */
.d3-node-port-input-arrow {
  display: none;
}

.elyra-PipelineEditor .palette-flyout-div,
.elyra-PipelineEditor
  .palette-flyout-search-container
  .palette-flyout-search
  input {
  background-color: var(--jp-layout-color1);
  color: var(--jp-content-font-color1);
}

.elyra-PipelineEditor .palette-flyout-div {
  border-right: 1px solid var(--jp-layout-color3);
}

.elyra-PipelineEditor .palette-flyout-content .palette-list-item:hover {
  background-color: var(--jp-border-color1);
}

.elyra-PipelineEditor .bx--search-magnifier {
  stroke: var(--jp-inverse-layout-color1);
}

.elyra-PipelineEditor svg.palette-flyout-category-caret,
.elyra-PipelineEditor .palette-flyout-category-item-icon {
  background: none;
  fill: var(--jp-inverse-layout-color1);
}

.tip-palette-item,
.tip-palette-category,
.tip-palette-label,
.tip-palette-desc {
  color: var(--elyra-color-tooltip-text) !important;
}

.elyra-PipelineEditor
  .palette-flyout-category
  .elyra-PipelineEditor
  .palette-content-list {
  border-bottom: 1px solid var(--jp-content-font-color0);
}

/* tabs */
.elyra-tabPanel > .elyra-actionBar {
  padding: 0 8px;
}

.elyra-tab {
  cursor: pointer;
  user-select: none;
  text-transform: uppercase;
  padding: 4px 10px 3px;
}

.elyra-tabText {
  line-height: 27px;
  font-family: var(--elyra-font-family-sans);
  font-size: 11px;
  font-weight: var(--elyra-font-weight-sans);
  color: var(--jp-border-color1);
}

.elyra-tabText:hover {
  color: var(--jp-ui-font-color0);
}

.elyra-tabText.activeTab {
  color: var(--jp-ui-font-color0);
  border-bottom: 1px solid var(--jp-border-color2);
}

.elyra-icon {
  font: normal normal normal 16px/1 codicon;
  font-size: 16px;
  text-decoration: none;
  text-rendering: auto;
  text-align: center;
  -webkit-font-smoothing: antialiased;
}

.elyra-actionItem {
  cursor: pointer;
  user-select: none;
  display: inline-block;
  transition: transform 50ms ease;
  position: relative;
  padding: 3px;
}

.elyra-actionItem:active {
  transform: scale(1.272019649);
}

.elyra-verticalTabGroup .elyra-tabItem {
  margin: 3px 0;
}

.elyra-verticalTabGroup .elyra-tabItem:hover {
  background-color: var(--jp-cell-editor-background);
}

.elyra-verticalTabGroup .elyra-tabItem:active {
  background-color: rgba(255, 255, 255, 0.18);
}

.elyra-actionBar .elyra-actionItemIcon {
  color: var(--elyra-color-arrayInput-text);
  display: block;
  height: 35px;
  line-height: 35px;
  min-width: 28px;
  margin-right: 4px;
}

.elyra-PipelineEditor .elyra-formEditor .field-object > fieldset > legend,
.elyra-PipelineEditor
  .form-group.field.field-oneOf
  .form-group.field-object
  .label-header {
  display: none;
}

.elyra-PipelineEditor .form-group.field.field-integer {
  width: 30%;
}

.elyra-PipelineEditor .array-pipelineDefaults.form-control {
  display: flex;
  justify-content: space-between;
  background-color: var(--jp-border-color3);
}

.elyra-PipelineEditor .nodeDescription {
  display: block;
  margin: 10px 47px;
  font-size: var(--jp-content-font-size1);
  color: var(--jp-content-font-color0);
  white-space: normal;
  line-height: 1.5;
  overflow-wrap: break-word;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  cursor: text;
}

.elyra-PipelineEditor .array-item .errorIndicator {
  left: -10px;
}

.elyra-PipelineEditor .elyra-formEditor .label-header.category-header label {
  font-size: var(--jp-content-font-size2);
}

.elyra-PipelineEditor .errorIndicator {
  width: 2px;
  background: var(--jp-error-color0);
  height: 92%;
  position: absolute;
  left: -2px;
  bottom: 0px;
  top: 0px;
}

.elyra-PipelineEditor .form-group.field {
  min-width: auto;
  width: 100%;
}

.elyra-PipelineEditor .elyra-formEditor select.form-control {
  padding-right: 1.5em;
}

.elyra-PipelineEditor #root > .form-group.field:not(.field-object) {
  padding-left: 14px;
  padding-right: 14px;
  padding-top: 12px;
  padding-bottom: 18px;
}

.elyra-PipelineEditor #root > .form-group.field > fieldset > .form-group.field {
  padding-left: 14px;
}

.elyra-PipelineEditor
  #root
  > .form-group.field
  > fieldset
  > .form-group.field.field-null,
.elyra-PipelineEditor #root > .form-group.field.field-null {
  padding-left: 0;
}

.elyra-PipelineEditor .elyra-formEditor {
  padding: 10px 47px;
}

.elyra-stringArrayControl-listRow:hover .elyra-stringArrayControl-listActions {
  height: 100%;
  align-items: center;
  margin-right: 3px;
}

.field-array-of-object .array-item:hover,
.field-object
  > fieldset
  > .field-object
  > fieldset
  > .field-object:not(.small-object-field)
  > fieldset:hover {
  background-color: var(--jp-border-color3);
}

.field-array-of-object .array-item,
.field-object
  > fieldset
  > .field-object
  > fieldset
  > .field-object:not(.small-object-field)
  > fieldset {
  display: flex;
  flex-direction: column;
  border: 1px solid var(--jp-border-color2);
  padding: 10px;
  border-radius: 5px;
}

.field-array-of-object button.jp-mod-styled.jp-mod-warn {
  width: fit-content;
}

.field-array-of-object label.control-label {
  margin-top: 5px;
}

.elyra-actionItem:hover {
  background-color: var(--jp-border-color1);
}

.elyra-stringArrayControl-listActions .elyra-actionItemIcon {
  color: var(--elyra-color-arrayInput-text);
  width: 16px;
  height: 20px;
  padding: 2px;
  margin-right: 2px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-position: center;
}

.elyra-tabItemIcon {
  cursor: pointer;
  user-select: none;
  color: var(--elyra-color-arrayInput-text);
  display: inline-block;
  height: 35px;
  line-height: 35px;
  min-width: 28px;
  margin-right: 4px;
}

.elyra-icon {
  background-repeat: no-repeat;
}
/* ... */

